<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" android:orientation="vertical" android:gravity="center_horizontal">
	<EditText android:id="@+id/login_txtUsername" android:hint="@string/hint_username" android:layout_width="200dp" android:layout_height="40dp"/>
	<EditText android:id="@+id/login_txtPassword" android:hint="@string/hint_password" android:layout_width="200dp" android:layout_height="40dp" android:inputType="textPassword" />
	<Button android:id="@+id/login_btnSubmit" android:text="@string/button_login" android:layout_width="200dp" android:layout_height="40dp" />
	<TextView android:id="@+id/login_txtResult" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>
