<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UITestSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="button_login">Login</string>
	<string name="hint_username">Username</string>
	<string name="hint_password">Password</string>
	<string name="login_successful">Login successful!</string>
	<string name="login_error">Wrong username or password!</string>
</resources>
